@@ -66,6 +66,7 @@ target_sources(herbstluftwm PRIVATE
     tmp.cpp tmp.h
     types.cpp types.h
     utils.cpp utils.h
+    watchers.h watchers.cpp
     x11-types.cpp x11-types.h
     x11-utils.cpp x11-utils.h
     xconnection.cpp xconnection.h
