@@ -56,6 +56,9 @@ public:
     void compare_complete(Completion& complete);
     static Attribute* newAttributeWithType(std::string typestr, std::string attr_name, Output output);
     static void completeAttributeType(Completion& complete);
+    static void completeObjectPath(Completion& complete, Object* rootObject,
+                                   bool attributes = false,
+                                   std::function<bool(Attribute*)> attributeFilter = {});
     void completeObjectPath(Completion& complete, bool attributes = false,
                             std::function<bool(Attribute*)> attributeFilter = {});
     void completeAttributePath(Completion& complete);
