@@ -11,6 +11,7 @@ Current git version
     'title_color', 'title_font')
   * New command 'help' for live documentation on the object tree
   * The 'lock_tag' attribute is now writable.
+  * New 'watch' command that emits hooks when attribute values change.
   * New dependencies: xft, freetype
 
 Release 0.9.1 on 2020-12-28
